<?xml version="1.0"?>
<package format="2">
  <name>distributed_vision_device</name>
  <version>0.0.0</version>
  <description>
  This package provides robot operation of distributed vision devices.
  </description>
  <maintainer email="amakou0614@gmail.com">Koki Amabe</maintainer>
  <author email="amakou0614@gmail.com">Koki Amabe</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>dynamic_tf_publisher</exec_depend>
  <exec_depend>apriltag_ros</exec_depend>
</package>
